# quantum-x

./: .coveragerc  .env.backup  .gitignore  .pre-commit-config.yaml  ANALISE_MATURIDADE.md  API_README.md  CERTIFICACAO_BRONZE_100.md  CHANGELOG.md  CHECKLIST_STATUS_PROJETO_SPILLOVER_INTELLIGENCE.md  CODE_OF_CONDUCT.md  CODE_REVIEW_REPORT.md  COVERAGE_ANALYSIS.md  COVERAGE_FINAL_SERVICES_COMPLETE.md  COVERAGE_REPORT_DIA2.md  COVERAGE_REPORT_FINAL_OPCAO_B.md  Dockerfile  Documentação de APIs - Sistema CLI Trading Signal.md  Documento de Requisitos do Sistema (DRS).md  FINAL_CODE_REVIEW_REPORT.md  FINAL_COVERAGE_REPORT.md  FRED_API_SETUP.md  FRED_CONFIGURATION_REPORT.md  GITIGNORE_ISSUES.md  GO_LIVE_CHECKLIST.md  LICENSE  MODEL_CARD_v1.0.2.md  Makefile  Makefile.validation  NETWORK_EFFECTS_README.md  Pitch.md  README.md  README_ENTERPRISE.md  RELATORIO_CAPACIDADE_ANALITICA.md  RELATORIO_MELHORIAS_APIS.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v2.0.0-enterprise.md  REQUISITOS_v1.0_BRONZE.md  REQUISITOS_v2.0.md  RESUMO_ENTREGAS_COMPLETO.md  (+59 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  validation.yml.example
alembic/: env.py
alembic/versions/: b01bfe0db427_add_method_field_to_economic_series_and_.py
api/: app.py  requirements.txt
api/templates/: dashboard.html  network_dashboard.html
app/: __init__.py  main.py
app/core/: config.py  database.py  scheduler.py
app/models/: global_data.py  time_series.py
app/schemas/: data.py
app/services/: robust_data_collector.py
app/types/: brazil_indicators.py  brazil_spillovers.py  global_regime.py  macro_analysis.py
cli/: validate_science.py
configs/: validation.yaml
dashboard/: .eslintrc.json  Dockerfile  README.md  jest.config.js  jest.setup.js  next.config.ts  package-lock.json  package.json  tailwind.config.js
dashboard/.next/: trace
data/models/: README.md
data/processed/: fed_clean_data.csv
data/raw/: fed_detailed_data.csv  fed_detailed_data.json  fed_interest_rates.csv  fed_selic_combined.csv  fed_selic_combined.json
docs/: ACADEMIC_PAPER_DRAFT.md  COLD_OUTREACH_BLITZ_200_PROSPECTS.md  COLD_OUTREACH_STRATEGY.md  DEMO_SCRIPT_PADRONIZADO.md  LINKEDIN_ARTICLE_CATEGORY_CREATION.md  LINKEDIN_POSTS.md  PITCH_DECK_BLITZ_10_SLIDES.md  PITCH_DECK_COMMERCIAL.md  SCIENTIFIC_AUTHORITY_MOAT_STRATEGY.md  SCIENTIFIC_PORTFOLIO.md  WEBSITE_BANNER_EARLY_PIONEER.md
examples/: interest_rates_example.py  selic_example.py
monitoring/: prometheus.yml
notebooks/: demo_spillover_analysis.ipynb
reports/benchmarks_np_test/: benchmarks_results.json
reports/heteroskedasticity_test/: hetero_size_results.json
reports/lag_selection_test/: lag_distributions.json  lag_selection_results.json
reports/size_power_test/: power_results.json  size_results.json
reports/small_samples_test/: small_power_results.json  small_size_results.json
reports/structural_breaks_test/: breaks_results.json
scripts/: download_complete_data.py  download_fed_detailed.py  train_pipeline.py
src/: __init__.py
src/api/: endpoints_v2.py  main.py  middleware.py  schemas.py
src/core/: config.py  exceptions.py  interfaces.py  models.py
src/enterprise/: __init__.py  cache.py  config.py  database.py  models.py  queue.py  retrainer.py
src/factories/: service_factory.py
src/models/: bvar_minnesota.py  local_projections.py
src/network_effects/: __init__.py  client_tracker.py  model_improver.py  (+3 more)
tests/: conftest.py
tests_scientific/: README.md  __init__.py
(+155 files in other folders)
